@@ -569,3 +569,152 @@ java --enable-preview --add-modules jdk.incubator.vector -cp target/classes org.
 # VectorBenchmark
 java --enable-preview --add-modules jdk.incubator.vector -cp target/classes org.example.concepts.vector.VectorBenchmark
 ```
+
+---
+
+# 🔍 Dynamic Agent Loading Demo: JEP 451 in Action
+
+The Dynamic Agent Loading demo is located in `org.example.concepts.dynamicagentloading`:
+
+- `Calculator` — simple class used as the mock target
+- `DynamicAgentLoadingDemo` — Mockito test that triggers JEP 451 warnings
+
+---
+
+## 🧠 What This Demo Shows
+
+Mockito 5 uses `InlineByteBuddyMockMaker` as its default mock maker. Unlike the traditional subclass-based approach, it uses bytecode instrumentation — which requires loading the ByteBuddy agent dynamically into the running JVM via the Attach API. This is exactly the mechanism Java 21 is beginning to restrict under JEP 451.
+
+This demo shows:
+- How a standard Mockito test triggers dynamic agent loading
+- What the JEP 451 warning lines mean
+- How to diagnose the root cause using `-Djdk.instrument.traceUsage`
+- How to suppress the warnings using `-XX:+EnableDynamicAgentLoading` in Surefire config
+
+---
+
+## ▶️ Run the Demo
+
+### Default run — JEP 451 warnings appear
+
+```bash
+mvn clean compile test -Dtest=DynamicAgentLoadingDemo
+```
+
+**Expected console output:**
+
+```
+[INFO] Running org.example.concepts.dynamicagentloading.DynamicAgentLoadingDemo
+WARNING: A Java agent has been loaded dynamically (byte-buddy-agent-1.14.10.jar)
+WARNING: If a serviceability tool is in use, please run with -XX:+EnableDynamicAgentLoading to hide this warning
+WARNING: If a serviceability tool is not in use, please run with -Djdk.instrument.traceUsage for more information
+WARNING: Dynamic loading of agents will be disallowed by default in a future release
+[INFO] Tests run: 2, Failures: 0, Errors: 0, Skipped: 0
+[INFO] BUILD SUCCESS
+```
+
+### Diagnose — find root cause via full stack trace
+
+Add `-Djdk.instrument.traceUsage` as a system property on the `mvn` command line. This is a system property (not a JVM flag), so it can be passed directly:
+
+```bash
+mvn clean compile test -Dtest=DynamicAgentLoadingDemo -Djdk.instrument.traceUsage
+```
+
+This prints a full stack trace for every `Instrumentation` API call, identifying exactly which class inside `mockito-core` triggered the agent load. Read the stack trace from the bottom up — it starts at `Mockito.<clinit>` and traces through the plugin system to `InlineDelegateByteBuddyMockMaker` at line 134.
+
+### Suppress — add `-XX:+EnableDynamicAgentLoading` to Surefire config
+
+`-XX:+EnableDynamicAgentLoading` is a JVM flag — it cannot be passed directly on the `mvn` command line. Maven would try to interpret `-XX` as a plugin prefix and fail with `NoPluginFoundForPrefixException`. It must go in the Surefire plugin `<argLine>` so it is passed to the forked JVM that runs your tests:
+
+```xml
+<plugin>
+    <artifactId>maven-surefire-plugin</artifactId>
+    <configuration>
+        <argLine>-XX:+EnableDynamicAgentLoading</argLine>
+    </configuration>
+</plugin>
+```
+
+---
+
+## 🖥️ Demo 2 — VisualVM Profiling (Standalone App)
+
+VisualVM uses the same Attach API mechanism as Mockito. When you start CPU profiling, VisualVM dynamically loads `jfluid-server-15.jar` — triggering identical JEP 451 warnings.
+
+### Before you run — enable the profiler wait flag
+
+Inside `RetailMemoryStress.java`, set the following field to `true`:
+
+```java
+private static final boolean WAIT_FOR_PROFILER = true;
+```
+
+This makes the app pause at startup and print its PID, giving you time to attach VisualVM and start profiling before the workload begins.
+
+### Run the standalone app
+
+```bash
+java -cp target/classes org.example.concepts.zgc.RetailMemoryStress
+```
+
+The app will pause and display its PID — do not press Enter yet.
+
+### VisualVM CPU profiling steps
+
+1. Launch VisualVM
+2. Find the `RetailMemoryStress` process under **Local Applications**
+3. Double-click to attach — **no JEP 451 warning at this point**
+4. Click the **Profiler** tab
+5. Click the **CPU** button to start profiling
+6. **JEP 451 warning fires immediately** in the application console — this is the exact moment VisualVM loads `jfluid-server-15.jar` via the Attach API
+7. Go back to the terminal and press Enter to let the workload run
+
+### Suppress — add `-XX:+EnableDynamicAgentLoading` directly to the java command
+
+For a standalone app, Surefire `<argLine>` does not apply. Pass the flag directly on the `java` command line:
+
+```bash
+java -cp target/classes -XX:+EnableDynamicAgentLoading org.example.concepts.zgc.RetailMemoryStress
+```
+
+### Diagnose — prove VisualVM uses the same Attach API
+
+Add `-Djdk.instrument.traceUsage` directly to the `java` command. When you click CPU profiling in VisualVM, the console will show the agent being loaded:
+
+```bash
+java -cp target/classes -Djdk.instrument.traceUsage org.example.concepts.zgc.RetailMemoryStress
+```
+
+**Actual console output when CPU profiling starts:**
+
+```
+Java HotSpot(TM) 64-Bit Server VM warning: Sharing is only supported for boot
+     loader classes because bootstrap classpath has been appended
+WARNING: A Java agent has been loaded dynamically
+     (C:\...\visualvm_22\visualvm\lib\jfluid-server-15.jar)
+WARNING: If a serviceability tool is in use, please run with
+     -XX:+EnableDynamicAgentLoading to hide this warning
+WARNING: Dynamic loading of agents will be disallowed by default in a future release
+Profiler Agent: JNI OnLoad Initializing...
+Profiler Agent: Established connection with the tool
+Profiler Agent: Local accelerated session
+```
+
+**Key observations:**
+
+- The full path `visualvm\lib\jfluid-server-15.jar` is shown — this is the proof. VisualVM loaded its own agent dynamically via the Attach API, the same mechanism as Mockito
+- Only **3 JEP 451 warning lines** appear here — unlike Mockito which shows 4. The third Mockito line (`-Djdk.instrument.traceUsage for more information`) is absent because `traceUsage` is already active
+- `-Djdk.instrument.traceUsage` does **not** produce a full stack trace for VisualVM's agent loading — VisualVM's native profiler agent (`jfluid-server-15.jar`) uses a JNI-based loading path, which bypasses the Java-level `Instrumentation` stack that `traceUsage` intercepts
+- The `CDS warning` (`Sharing is only supported for boot loader classes`) is unrelated to JEP 451 — it is a harmless side effect of the bootstrap classpath being modified by the profiler agent
+
+---
+
+## ⚠️ JEP 451 Warning Lines Decoded
+
+| Line | Meaning |
+|------|---------|
+| `A Java agent has been loaded dynamically (byte-buddy-agent-1.14.10.jar)` | Identifies exactly which agent JAR was loaded and from where |
+| `If a serviceability tool is in use, run with -XX:+EnableDynamicAgentLoading` | The suppress path — use this for legitimate tools like Mockito |
+| `If a serviceability tool is not in use, run with -Djdk.instrument.traceUsage` | The diagnostic path — use this to find unexpected agent loading |
+| `Dynamic loading of agents will be disallowed by default in a future release` | The core JEP 451 message — plan ahead, this will break in a future Java version |
